--- a/opTern01.html
+++ b/opTern01.html
@@ -11,9 +11,11 @@
     */
 
     //Entrada
-
-
+   
+    const totaldaviagem = Number(prompt(`Informe o valor total da viagem`));
+    let parcelas;
     //Processamento
+    
 
 
     //Saída
