--- a/opTern02.html
+++ b/opTern02.html
@@ -10,11 +10,11 @@
     */
 
     //Entrada
-
-
+     const km = Number(prompt(`Me informe a distancia perccorida pelo entragador`));
+      let distancia;
     //Processamento
-
-
+     
+    
     //Saída
 
 </script>
